<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath/>
    </parent>

    <groupId>momomomo.dungeonwalker</groupId>
    <artifactId>dungeon-walker-history</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Dungeon Walker History</name>

    <properties>
        <java.version>25</java.version>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <sonar.organization>alejoceballos</sonar.organization>
        <sonar-maven-plugin.version>5.7.0.6970</sonar-maven-plugin.version>

        <dungeon-walker-contracts.version>1.0-SNAPSHOT</dungeon-walker-contracts.version>

        <apache-commons-lang.version>3.20.0</apache-commons-lang.version>

        <spring-cloud.version>2025.1.2</spring-cloud.version>
        <otel.version>2.26.1</otel.version>
        <postgres.version>42.7.13</postgres.version>

        <jib.version>3.5.1</jib.version>

        <cucumber.version>7.34.3</cucumber.version>

        <testcontainers.version>1.21.4</testcontainers.version>
        <testcontainers-rabbitmq.version>2.0.1</testcontainers-rabbitmq.version>
    </properties>

    <modules>
        <module>history-core</module>
        <module>history-transport</module>
        <module>history-domain</module>
        <module>history-startup</module>
    </modules>

    <dependencies>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>${sonar-maven-plugin.version}</version>
            </plugin>

            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>${jib.version}</version>
                <configuration>
                    <from>
                        <image>alejoceballos/eclipse-temurin-25-jre-with-curl:v1</image>
                    </from>
                    <to>
                        <image>alejoceballos/dungeon-walker-history:v1</image>
                    </to>
                    <container>
                        <mainClass>momomomo.dungeonwalker.history.startup.DungeonWalkerHistory</mainClass>
                        <ports>
                            <port>8086</port>
                        </ports>
                        <jvmFlags>
                            <jvmFlag>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</jvmFlag>
                        </jvmFlags>
                    </container>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
